tests/types_mut_bad_readonly_slice_write.stderr
tests/types_mut_bad_readonly_slice_write.sl:5:2: error: SL2004: type mismatch
