tests/types_mut_bad_readonly_slice_write.sl
fn main() i32 {
    var a [i32 2]
    var ro [i32] = a
    ro[0] = 1
    return 0
}
